--- a/outdoor-hiking-shop/backend/.env
+++ b/outdoor-hiking-shop/backend/.env
@@ -5,3 +5,9 @@ DB_NAME=outdoor_hiking_shop
 
 # JWT Secret (Change this to something secure)
 JWT_SECRET=123456789
+
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=monkey11
+
+MONGO_URI=mongodb://localhost:27017/outdoorshop
