--- a/outdoor-hiking-shop/backend/package.json
+++ b/outdoor-hiking-shop/backend/package.json
@@ -14,9 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
+    "morgan": "^1.10.0",
     "mysql2": "^3.12.0",
-    "neo4j-driver": "^5.28.1"
+    "neo4j-driver": "^5.28.1",
+    "slugify": "^1.6.6"
   }
 }
