--- a/.github/workflows/main_outdoorshop.yml
+++ b/.github/workflows/main_outdoorshop.yml
@@ -23,14 +23,18 @@ jobs:
         with:
           node-version: '22.x'
 
-      - name: npm install, build, and test
+      - name: Install dependencies and build
         run: |
+          cd backend
           npm install
           npm run build --if-present
-          npm run test --if-present
-
+          cd ..
+        
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd backend
+          zip -r ../release.zip ./*
+          cd ..
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -71,4 +75,3 @@ jobs:
           app-name: 'outdoorshop'
           slot-name: 'Production'
           package: .
-          
