--- a/.github/workflows/main_outdoorshop.yml
+++ b/.github/workflows/main_outdoorshop.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - outdoorshop
 
 on:
@@ -25,16 +22,16 @@ jobs:
 
       - name: Install dependencies and build
         run: |
-          cd backend
+          cd outdoor-hiking-shop/backend
           npm install
           npm run build --if-present
-          cd ..
+          cd ../..
         
       - name: Zip artifact for deployment
         run: |
-          cd backend
-          zip -r ../release.zip ./*
-          cd ..
+          cd outdoor-hiking-shop/backend
+          zip -r ../../release.zip ./*
+          cd ../..
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
